	* PrimitivePDBWriter uses first letter of segid as PDB chain id
	* Fixed a problem with the strict PDBReader: raised exception when the
	  pdb did not contain a segid
        * Support for PDBs with 4 character resnames and segID output when
	  writing (Issue 63) --- makes the (default) PrimitivePDBReader/Writer
	  more suitable for NAMD/CHARMM but breaks strict PDB standard. If
	  you need full PDB reading capabilities, use the strict PDB reader.
	* fixed bug in (experimental) phi and psi selections
	* aliased segment.name to segment.id
	* fixed bugs in reading of unit cells (Issue 60, Issue 61, Issue 34)
	* universe.trajectory.delta returns the full precision dt value
	  (Issue 64)
	* fixed bug in DCDWriter (XTC->DCD was broken, Issue 59)
        * new method AtomGroup.bbox() that returns the orthorhombic bounding box
	* enhancements of the analysis.density module (build density
	  from B-factors) 
	* PQR radius is now an attribute of Atom; AtomGroup.radii() returns the
	  radii as a NumPy array; internally B-factor has also become an
	  attribute of each Atom. 
        * recognise many more OPLS/AA and Amber residue names as "protein"
	* analysis.align: convenience functions rotation_matrix() and alignto()
	* doc improvements 

02/08/11 orbeckst, denniej0, jandom, tyler.je.reddy, Joshua Adelman
        * 0.7.1 release
        * online documentation
        * AMBER topology and trj capabilities (netcdf not yet available)
        * PQR file reading support
        * new analysis.contacts.ContactAnalysis1 class that supports a
	  native contact analysis between arbitrary groups     
        * new examples (e.g. peptide helix clustering in a membrane)
	* fixed Issue 58 (align.rms_fit_trj; fix reported by Joshua
  	  Adelman)
	* new analysis module 'density': creation and analysis of volume data
        * fast RMSD aligner based on Douglas Theobald's QCP method for
	  calculating the minimum RMSD between two structures and